--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 keywords = ["http", "https", "client", "request"]
 categories = ["web-programming::http-client"]
 license = "ISC"
+edition = "2018"
 
 [badges]
 travis-ci = { repository = "neonmoe/minreq", branch = "1.0.3" }
@@ -20,6 +21,7 @@ maintenance = { status = "passively-maintained" }
 rustls = { version = "0.15", optional = true }
 webpki-roots = { version = "0.16", optional = true }
 webpki = { version = "0.19", optional = true }
+failure = "0.1"
 
 [dev-dependencies]
 tiny_http = "0.6"
