Add error propagation to Response::from_stream
Remove unwraps and propagate and io errors occuring when trying to
read from tcp stream

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,6 @@ failure = "0.1"
 tiny_http = "0.6"
 
 [features]
-default = []
+default = ["https"]
 
 https = ["rustls", "webpki-roots", "webpki"]
