--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,12 @@
 [package]
-name = "minreq_duma"
+name = "mrq"
 version = "0.1.0"
-authors = ["Jens Pitkanen <jens@neon.moe>"]
 description = "Simple, minimal-dependency HTTP client"
-documentation = "https://docs.rs/minreq"
-homepage = "https://github.com/neonmoe/minreq"
-repository = "https://github.com/neonmoe/minreq"
 readme = "README.md"
 keywords = ["http", "https", "client", "request"]
 categories = ["web-programming::http-client"]
 license = "ISC"
 edition = "2018"
-
-[badges]
-travis-ci = { repository = "neonmoe/minreq", branch = "1.0.3" }
-codecov = { repository = "neonmoe/minreq" }
-maintenance = { status = "passively-maintained" }
 
 [dependencies]
 rustls = { version = "0.15", optional = true }
@@ -28,5 +19,4 @@ tiny_http = "0.6"
 
 [features]
 default = ["https"]
-
 https = ["rustls", "webpki-roots", "webpki"]
